# exercice

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
glue/: CMakeLists.txt  Doxyfile.in
glue/Config/: CMakeLists.txt
glue/Config/inc/: CoreConfigManager.hpp  FileWatcher.hpp  YAMLtoJsonConfigManager.hpp
glue/Config/src/: CoreConfigManager.cpp  FileWatcher.cpp  FileWatcher.cpp.orig  FileWatcher.cpp.rej  YAMLtoJsonConfigManager.cpp
glue/Main/: CMakeLists.txt  Main.cpp
glue/Server/: CMakeLists.txt
glue/Server/inc/: HttpLibServer.hpp  HttpServer.hpp
glue/Server/src/: HttpLibServer.cpp
glue/interfaces/: ConfigWatcher.hpp  GenericConfigManager.hpp  GenericServer.hpp
patchs/: cpp-httplib.patch  filewatch.patch  rapidxml-1.13.patch  rapidxml.patch  tojson.patch  yaml-cpp.patch
